[gd_scene load_steps=12 format=3 uid="uid://ds50m5bk5qstt"]

[ext_resource type="Script" path="res://global_objects/user_balance_displayer/user_balance_displayer.gd" id="1_ai4qv"]
[ext_resource type="Texture2D" uid="uid://bjwcf6qnvyi1h" path="res://global_objects/user_balance_displayer/assets/user_balance_container.png" id="1_o6ajw"]
[ext_resource type="Texture2D" uid="uid://b77uj72t7snrb" path="res://global_objects/user_balance_displayer/assets/single_gold_coin.png" id="2_p221i"]

[sub_resource type="Animation" id="Animation_7xm1f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_15ty6"]
resource_name = "_move_down"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 115), Vector2(0, 109)]
}

[sub_resource type="Animation" id="Animation_opuv3"]
resource_name = "_move_up"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 115), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nf4ux"]
resource_name = "_receive_coins_from_anywhere"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmountReceived:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coins_from_anywhere:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8nos2"]
resource_name = "_receive_coins_from_box"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AmountReceived:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coins_from_box:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gtjuu"]
_data = {
"RESET": SubResource("Animation_7xm1f"),
"_move_down": SubResource("Animation_15ty6"),
"_move_up": SubResource("Animation_opuv3"),
"_receive_coins_from_anywhere": SubResource("Animation_nf4ux"),
"_receive_coins_from_box": SubResource("Animation_8nos2")
}

[sub_resource type="Curve" id="Curve_npbi6"]
_data = [Vector2(0.00436682, 0.68421), 0.0, 0.864151, 0, 0, Vector2(0.497817, 0.936842), 0.0, 0.0, 0, 0, Vector2(1, 0.821053), -0.834413, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_dypya"]
offsets = PackedFloat32Array(0, 0.40404)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[node name="UserBalanceDisplayer" type="Node2D"]
process_mode = 3
script = ExtResource("1_ai4qv")

[node name="Texture" type="TextureRect" parent="."]
offset_right = 341.0
offset_bottom = 112.0
texture = ExtResource("1_o6ajw")

[node name="BalanceLabel" type="Label" parent="Texture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 38.0
offset_top = 31.0
offset_right = 229.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0.321569, 0.196078, 0.054902, 1)
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 2

[node name="AmountReceived" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 9.0
offset_top = 121.0
offset_right = 67.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 50
text = "+0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gtjuu")
}

[node name="Coins_from_box" type="CPUParticles2D" parent="."]
position = Vector2(-1211, 598)
emitting = false
amount = 10
lifetime = 1.8
one_shot = true
speed_scale = 1.5
randomness = 1.0
texture = ExtResource("2_p221i")
direction = Vector2(1, 1)
spread = 2.55
gravity = Vector2(600, -550)
initial_velocity_min = 254.71
initial_velocity_max = 254.71
angular_velocity_min = 163.02
angular_velocity_max = 163.02
linear_accel_min = -56.6
linear_accel_max = -56.6
radial_accel_min = 35.85
radial_accel_max = 35.85
scale_amount_curve = SubResource("Curve_npbi6")
color_ramp = SubResource("Gradient_dypya")

[node name="Coins_from_anywhere" type="CPUParticles2D" parent="."]
position = Vector2(86, 124)
emitting = false
amount = 3
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
texture = ExtResource("2_p221i")
direction = Vector2(0, -1)
spread = 2.55
gravity = Vector2(100, -600)
initial_velocity_min = 103.77
initial_velocity_max = 103.77
angular_velocity_min = 163.02
angular_velocity_max = 163.02
linear_accel_min = -56.6
linear_accel_max = -56.6
radial_accel_min = 35.85
radial_accel_max = 35.85
scale_amount_curve = SubResource("Curve_npbi6")
color_ramp = SubResource("Gradient_dypya")
